--- a/src/vista/DistBinomial.fxml
+++ b/src/vista/DistBinomial.fxml
@@ -26,10 +26,10 @@
             <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="124.0" prefHeight="17.0" prefWidth="60.0" text="σ² = V(X) =" />
             <Label alignment="CENTER_RIGHT" layoutX="34.0" layoutY="156.0" prefHeight="17.0" prefWidth="60.0" text="σ =" />
             <TextField fx:id="txtFuncion" editable="false" layoutX="102.0" layoutY="25.0" prefHeight="25.0" prefWidth="100.0" />
-            <TextField fx:id="txtFuncionA" layoutX="102.0" layoutY="58.0" prefHeight="25.0" prefWidth="100.0" />
-            <TextField fx:id="txtEsperanza" layoutX="102.0" layoutY="88.0" prefHeight="25.0" prefWidth="100.0" />
-            <TextField fx:id="txtVarianza" layoutX="102.0" layoutY="120.0" prefHeight="25.0" prefWidth="100.0" />
-            <TextField fx:id="txtDesviacion" layoutX="102.0" layoutY="152.0" prefHeight="25.0" prefWidth="100.0" />
+            <TextField fx:id="txtFuncionA" editable="false" layoutX="102.0" layoutY="58.0" prefHeight="25.0" prefWidth="100.0" />
+            <TextField fx:id="txtEsperanza" editable="false" layoutX="102.0" layoutY="88.0" prefHeight="25.0" prefWidth="100.0" />
+            <TextField fx:id="txtVarianza" editable="false" layoutX="102.0" layoutY="120.0" prefHeight="25.0" prefWidth="100.0" />
+            <TextField fx:id="txtDesviacion" editable="false" layoutX="102.0" layoutY="152.0" prefHeight="25.0" prefWidth="100.0" />
          </children>
       </Pane>
       <Pane layoutX="173.0" layoutY="171.0" prefHeight="57.0" prefWidth="256.0">
