--- a/src/vista/DistBinomial.fxml
+++ b/src/vista/DistBinomial.fxml
@@ -51,7 +51,9 @@
             <TextField fx:id="txtX" layoutX="177.0" layoutY="14.0" prefHeight="25.0" prefWidth="100.0" />
             <TextField fx:id="txtN" layoutX="177.0" layoutY="43.0" prefHeight="25.0" prefWidth="100.0" />
             <TextField fx:id="txtP" layoutX="177.0" layoutY="70.0" prefHeight="25.0" prefWidth="100.0" />
-            <Label layoutX="302.0" layoutY="18.0" prefHeight="17.0" prefWidth="117.0" />
+            <Label fx:id="lblMsgX" layoutX="292.0" layoutY="18.0" prefHeight="17.0" prefWidth="117.0" textFill="#d20505" />
+            <Label fx:id="lblMsgN" layoutX="292.0" layoutY="47.0" prefHeight="17.0" prefWidth="117.0" textFill="#d20505" />
+            <Label fx:id="lblMsgP" layoutX="292.0" layoutY="74.0" prefHeight="17.0" prefWidth="117.0" textFill="#d20505" />
          </children>
       </Pane>
       <Text layoutX="207.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Distribución Binomial">
