--- a/src/vista/DistBinomial.fxml
+++ b/src/vista/DistBinomial.fxml
@@ -63,10 +63,10 @@
       </Text>
       <BarChart fx:id="grafica" layoutX="237.0" layoutY="222.0" prefHeight="212.0" prefWidth="339.0">
         <xAxis>
-          <CategoryAxis side="BOTTOM" fx:id="xAxis" />
+          <CategoryAxis label="hkshak" side="BOTTOM" fx:id="xAxis" />
         </xAxis>
         <yAxis>
-          <NumberAxis side="LEFT" />
+          <NumberAxis fx:id="yAxis" side="LEFT" />
         </yAxis>
       </BarChart>
    </children>
