--- a/src/vista/DistGeometrica.fxml
+++ b/src/vista/DistGeometrica.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,32 +14,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="controlador.DistGeometricaController">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.DistGeometricaController">
     <stylesheets>
         <URL value="@distgeometrica.css" />
     </stylesheets>
    <children>
-      <Pane layoutX="34.0" layoutY="238.0" prefHeight="200.0" prefWidth="213.0">
-         <children>
-            <Label alignment="CENTER_RIGHT" layoutX="36.0" layoutY="29.0" prefHeight="17.0" prefWidth="60.0" text="f(x) =" />
-            <Label alignment="CENTER_RIGHT" layoutX="36.0" layoutY="62.0" prefHeight="17.0" prefWidth="60.0" text="F(x) =" />
-            <Label alignment="CENTER_RIGHT" layoutX="36.0" layoutY="92.0" prefHeight="17.0" prefWidth="60.0" text="μ = E(X) =" />
-            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="124.0" prefHeight="17.0" prefWidth="60.0" text="σ² = V(X) =" />
-            <Label alignment="CENTER_RIGHT" layoutX="34.0" layoutY="156.0" prefHeight="17.0" prefWidth="60.0" text="σ =" />
-            <TextField fx:id="txtFuncion" editable="false" layoutX="102.0" layoutY="25.0" prefHeight="25.0" prefWidth="100.0" />
-            <TextField fx:id="txtFuncionA" editable="false" layoutX="102.0" layoutY="58.0" prefHeight="25.0" prefWidth="100.0" />
-            <TextField fx:id="txtEsperanza" editable="false" layoutX="102.0" layoutY="88.0" prefHeight="25.0" prefWidth="100.0" />
-            <TextField fx:id="txtVarianza" editable="false" layoutX="102.0" layoutY="120.0" prefHeight="25.0" prefWidth="100.0" />
-            <TextField fx:id="txtDesviacion" editable="false" layoutX="102.0" layoutY="152.0" prefHeight="25.0" prefWidth="100.0" />
-         </children>
-      </Pane>
-      <Pane layoutX="183.0" layoutY="181.0" prefHeight="57.0" prefWidth="256.0">
-         <children>
-            <Button fx:id="btnCalcular" defaultButton="true" layoutX="33.0" layoutY="14.0" mnemonicParsing="false" onAction="#calcular" text="Calcular" />
-            <Button fx:id="btnLimpiar" layoutX="104.0" layoutY="14.0" mnemonicParsing="false" onAction="#limpiar" text="Limpiar" />
-            <Button fx:id="btnVolver" layoutX="174.0" layoutY="14.0" mnemonicParsing="false" onAction="#ir_Menu" text="Volver" />
-         </children>
-      </Pane>
       <Pane layoutX="165.0" layoutY="72.0" prefHeight="109.0" prefWidth="431.0">
          <children>
             <Label alignment="CENTER_RIGHT" layoutX="15.0" layoutY="47.0" prefHeight="17.0" prefWidth="133.0" text="Probabilidad de éxito (p):">
@@ -46,9 +26,15 @@
                   <Tooltip text="ds" />
                </tooltip>
             </Label>
-            <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="15.0" layoutY="18.0" prefHeight="17.0" prefWidth="133.0" text="Número de éxitos (x):" />
-            <TextField fx:id="txtX" layoutX="177.0" layoutY="14.0" prefHeight="25.0" prefWidth="100.0" />
-            <TextField fx:id="txtP" layoutX="177.0" layoutY="43.0" prefHeight="25.0" prefWidth="100.0" />
+            <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="-101.0" layoutY="18.0" prefHeight="17.0" prefWidth="249.0" text="Prueba en la que ocurre el primer éxito (x):" />
+            <TextField fx:id="txtX" layoutX="177.0" layoutY="14.0" prefHeight="25.0" prefWidth="100.0">
+               <tooltip>
+                  <Tooltip text="x ≥ 1" />
+               </tooltip></TextField>
+            <TextField fx:id="txtP" layoutX="177.0" layoutY="43.0" prefHeight="25.0" prefWidth="100.0">
+               <tooltip>
+                  <Tooltip text="0 ≤ p ≤1" />
+               </tooltip></TextField>
             <Label fx:id="lblMsgX" layoutX="292.0" layoutY="18.0" prefHeight="17.0" prefWidth="117.0" textFill="#d20505" />
             <Label fx:id="lblMsgP" layoutX="292.0" layoutY="47.0" prefHeight="17.0" prefWidth="117.0" textFill="#d20505" />
          </children>
@@ -58,13 +44,55 @@
             <Font size="20.0" />
          </font>
       </Text>
-      <BarChart fx:id="grafica" layoutX="247.0" layoutY="232.0" prefHeight="212.0" prefWidth="339.0">
+      <Pane layoutX="33.0" layoutY="266.0" prefHeight="200.0" prefWidth="213.0">
+         <children>
+            <Label alignment="CENTER_RIGHT" layoutX="36.0" layoutY="29.0" prefHeight="17.0" prefWidth="60.0" text="f(x) =" />
+            <Label alignment="CENTER_RIGHT" layoutX="36.0" layoutY="62.0" prefHeight="17.0" prefWidth="60.0" text="F(x) =" />
+            <Label alignment="CENTER_RIGHT" layoutX="36.0" layoutY="92.0" prefHeight="17.0" prefWidth="60.0" text="μ = E(X) =" />
+            <Label alignment="CENTER_RIGHT" layoutX="35.0" layoutY="124.0" prefHeight="17.0" prefWidth="60.0" text="σ² = V(X) =" />
+            <Label alignment="CENTER_RIGHT" layoutX="34.0" layoutY="156.0" prefHeight="17.0" prefWidth="60.0" text="σ =" />
+            <TextField fx:id="txtFuncion" editable="false" layoutX="102.0" layoutY="25.0" prefHeight="25.0" prefWidth="100.0">
+               <tooltip>
+                  <Tooltip text="Función de probabilidad" />
+               </tooltip>
+            </TextField>
+            <TextField fx:id="txtFuncionA" editable="false" layoutX="102.0" layoutY="58.0" prefHeight="25.0" prefWidth="100.0">
+               <tooltip>
+                  <Tooltip text="Función de probabilidad acumulada" />
+               </tooltip>
+            </TextField>
+            <TextField fx:id="txtEsperanza" editable="false" layoutX="102.0" layoutY="88.0" prefHeight="25.0" prefWidth="100.0">
+               <tooltip>
+                  <Tooltip text="Media" />
+               </tooltip>
+            </TextField>
+            <TextField fx:id="txtVarianza" editable="false" layoutX="102.0" layoutY="120.0" prefHeight="25.0" prefWidth="100.0">
+               <tooltip>
+                  <Tooltip text="Varianza" />
+               </tooltip>
+            </TextField>
+            <TextField fx:id="txtDesviacion" editable="false" layoutX="102.0" layoutY="152.0" prefHeight="25.0" prefWidth="100.0">
+               <tooltip>
+                  <Tooltip text="Desviación estándar" />
+               </tooltip>
+            </TextField>
+         </children>
+      </Pane>
+      <Pane layoutX="182.0" layoutY="207.0" prefHeight="53.0" prefWidth="256.0">
+         <children>
+            <Button fx:id="btnCalcular" defaultButton="true" layoutX="31.0" layoutY="14.0" mnemonicParsing="false" onAction="#calcular" prefHeight="25.0" prefWidth="58.0" text="Calcular" />
+            <Button fx:id="btnLimpiar" layoutX="99.0" layoutY="14.0" mnemonicParsing="false" onAction="#limpiar" prefHeight="25.0" prefWidth="58.0" text="Limpiar" />
+            <Button fx:id="btnVolver" layoutX="167.0" layoutY="14.0" mnemonicParsing="false" onAction="#ir_Menu" prefHeight="25.0" prefWidth="58.0" text="Volver" />
+         </children>
+      </Pane>
+      <BarChart fx:id="grafica" alternativeColumnFillVisible="true" animated="false" layoutX="235.0" layoutY="266.0" legendVisible="false" prefHeight="230.0" prefWidth="340.0">
          <xAxis>
-            <CategoryAxis side="BOTTOM" fx:id="xAxis" />
+            <CategoryAxis label="x" side="BOTTOM" fx:id="xAxis" />
          </xAxis>
          <yAxis>
-            <NumberAxis side="LEFT" />
+            <NumberAxis fx:id="yAxis" label="f(x)" side="LEFT" />
          </yAxis>
       </BarChart>
+      <Separator layoutX="60.0" layoutY="258.0" prefHeight="5.0" prefWidth="500.0" />
    </children>
 </AnchorPane>
